Add navbar to base template Add hero section to home template Add all views and url paths Re-order text in about page

--- a/portfolio/templates/portfolio/about.html
+++ b/portfolio/templates/portfolio/about.html
@@ -3,7 +3,7 @@
 {% load cloudinary %}
 
 {% block content %}
-<div class="container">
+<div class="container global">
   <div class="row justify-content-center">
     <div class="col-11 text-center mb-4">
       <h1>Welcome to my portfolio!</h1>
@@ -18,6 +18,7 @@
 
     <div class="col-11 col-md-6 mt-4 text-justify">
       <p>Hi! My name is Ax. I'm a former chef turned full stack developer — a shift that began as a small spark of curiosity and soon became a full-blown creative pursuit. What started as late nights and very early mornings learning to code has evolved into a new rhythm of life, one where structure and imagination meet in every project I take on.</p>
+      <p>Today, my focus is on crafting purposeful, user-centred applications — clean in code, intentional in design, and grounded in the same passion that’s shaped every chapter of my journey so far.</p>
     </div>
   </div>
 
@@ -30,15 +31,12 @@
       <h3>Learning Never Stops</h3>
       <p>After completing my Level 5 Full Stack Development course with the Code Institute, it took me less than a week to feel that familiar itch — the one that says, “you’re not done yet.” So, I took advantage of a discount offer and dove straight into a Codecademy subscription to keep building on that momentum to continue to learn. I have always loved learning — it’s something that feels less like an obligation to stay informed and more like a personal drive to grow and explore new ideas.</p>
 
-      <h3>Beyond the Screen</h3>
-      <p>Outside of code, I’m still very much the same creative at heart — a proud metalhead who finds calm in structure, fuel in caffeine, and inspiration in everyday rhythm. I’m at my happiest standing in a field, beer in hand, watching live music surrounded by people who share that same pulse of passion — laughing, shouting lyrics, and soaking up the energy that only a live crowd can bring.</p>
-      <p>That same rush I feel in front of a live stage often mirrors the flow I chase while coding — both driven by rhythm, emotion, and a desire to make something that moves people. My mornings start with Barry, my loyal sidekick, before settling into projects that blend logic with artistry — from building functional web apps to experimenting with design in Figma.</p>
-
       <h3>Before the Code</h3>
       <p>Before tech, my path led through Criminology and Criminal Justice Policy, earning a First-Class degree and postgraduate study at the London School of Economics and Political Science. That experience honed my analytical mindset and love for detail, which now drive how I debug, test, and design.</p>
 
-      <h3>Today</h3>
-      <p>Today, my focus is on crafting purposeful, user-centred applications — clean in code, intentional in design, and grounded in the same passion that’s shaped every chapter of my journey so far.</p>
+      <h3>Beyond the Screen</h3>
+      <p>Outside of code, I’m still very much the same creative at heart — a proud metalhead who finds calm in structure, fuel in caffeine, and inspiration in everyday rhythm. I’m at my happiest standing in a field, beer in hand, watching live music surrounded by people who share that same pulse of passion — laughing, shouting lyrics, and soaking up the energy that only a live crowd can bring.</p>
+      <p>That same rush I feel in front of a live stage often mirrors the flow I chase while coding — both driven by rhythm, emotion, and a desire to make something that moves people. My mornings start with Barry, my loyal sidekick, before settling into projects that blend logic with artistry — from building functional web apps to experimenting with design in Figma.</p>
     </div>
   </div>
   
