--- a/portfolio/templates/portfolio/contact.html
+++ b/portfolio/templates/portfolio/contact.html
@@ -2,8 +2,9 @@
 {% load static %}
 {% load cloudinary %}
 
+{% block body_class %}standard-page{% endblock %}
+
 {% block content %}
 
-<h1>Contact page</h1>
 
 {% endblock %}
