--- a/templates/base.html
+++ b/templates/base.html
@@ -7,11 +7,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <link rel="stylesheet" href="{% static 'css/style.css' %}">
-    <title>Portfolio</title>
+    <title>Ax's Portfolio</title>
 </head>
-<body>
+<body class="{% block body_class %}{% endblock %}">
     <div class="site-frame">
-        <nav class="navbar navbar-dark bg-dark fixed-top">
+        <nav class="navbar navbar-dark bg-dark">
             <div class="container-fluid justify-content-evenly">
                 <div class="navbar-icons d-flex flex-wrap justify-content-center">
                     <a href="{% url 'portfolio:home' %}" class="icon-link {% if page == 'home' %}active{% endif %}">
@@ -32,16 +32,25 @@
                 </div>
             </div>
         </nav>
+
+        <!-- One global hero section -->
+        <div class="hero-section">
+            {% block hero_content %}{% endblock %}
+        </div>
+
         <main>
             {% block content %}{% endblock %}
         </main>
+
         <footer class="global-footer text-center">
             <div class="footer-contact">
                 <a href="{% url 'portfolio:contact' %}" class="icon-link {% if page == 'contact' %}active{% endif %}">
-                    <img src="{% static 'images/dymo-contact.jpg' %}" alt="Contact label" class="nav-img" >
+                    <img src="{% static 'images/dymo-contact.jpg' %}" alt="Contact label" class="nav-img mb-3">
                 </a>
+                <a href="{{ about.linkedin_link }}" class="links" target="_blank"><strong>LinkedIn</strong></a>
+                <a href="{{ about.github_link }}" class="links" target="_blank"><strong>GitHub</strong></a>
             </div>
-            <p>&copy; 2025 /*axdesigns*/</p>
+            <p>&copy; <strong>2025 /*axdesigns*/</strong></p>
         </footer>
     </div>
 </body>
