--- a/portfolio/templates/portfolio/blog.html
+++ b/portfolio/templates/portfolio/blog.html
@@ -6,5 +6,23 @@
 
 {% block content %}
 
+<div class="container justify-contents-center">
+    <div class="row">
+        {% for blog in blogs %}
+        <div class="col-md-6 col-lg-4 mb-3">
+            <div class="card blog-card h-100">
+                {% if blog.blog_image %}
+                <img src="{{ blog.blog_image.url }}" class="card-img-top img-fluid blog-img" alt="{{ blog.title }}">
+                {% endif %}
+                <div class="card-body d-flex flex-column">
+                    <h5 class="card-title mb-3">{{ blog.title|safe}}</h5>
+                    <p class="card-text flex-grow-1 text-justify">{{ blog.summary|safe }}</p>
+                    <a href="#" class="btn btn-blog mt-auto">View More</a>
+                </div>
+            </div>
+        </div>
+        {% endfor %}
+    </div>
+  </div>
 
-{% endblock %}
+  {% endblock %}
