--- a/portfolio/templates/portfolio/blog.html
+++ b/portfolio/templates/portfolio/blog.html
@@ -10,14 +10,14 @@
     <div class="row">
         {% for blog in blogs %}
         <div class="col-md-6 col-lg-4 mb-3">
-            <div class="card blog-card h-100">
+            <div class="card blog-card blog-text h-100">
                 {% if blog.blog_image %}
                 <img src="{{ blog.blog_image.url }}" class="card-img-top img-fluid blog-img" alt="{{ blog.title }}">
                 {% endif %}
                 <div class="card-body d-flex flex-column">
                     <h5 class="card-title mb-3">{{ blog.title|safe}}</h5>
                     <p class="card-text flex-grow-1 text-justify">{{ blog.summary|safe }}</p>
-                    <a href="#" class="btn btn-blog mt-auto">View More</a>
+                    <a href="{% url 'portfolio:blog_detail' slug=blog.slug %}" class="btn btn-blog mt-auto">View More</a>
                 </div>
             </div>
         </div>
