--- a/portfolio/templates/portfolio/about.html
+++ b/portfolio/templates/portfolio/about.html
@@ -7,7 +7,7 @@
 {% block content %}
 
 <div class="container about-section">
-  <div class="row justify-content-center">
+  <div class="row justify-contents-center">
     <div class="col-12 text-center mt-4 mb-2">
       <h1>Welcome to my portfolio!</h1>
         <p>Here you can find information about my projects, skills, and experience.</p>
