--- a/portfolio/templates/portfolio/projects.html
+++ b/portfolio/templates/portfolio/projects.html
@@ -6,5 +6,24 @@
 
 {% block content %}
 
+<div class="container justify-contents-center">
+    <div class="row">
+        {% for project in projects %}
+        <div class="col-md-6 col-xl-4 mb-3">
+            <div class="card blog-card blog-text h-100">
+                {% if project.project_image %}
+                <img src="{{ project.project_image.url }}" class="card-img-top img-fluid project-img" alt="{{ projects.title }}">
+                {% endif %}
+                <div class="card-body d-flex flex-column">
+                    <h5 class="card-title">{{ project.title|safe}}</h5>
+                    <p class="card-text flex-grow-1 text-justify">{{ project.description|safe }}</p>
+                    <a href="{{ project.deployed_project_link }}" class="btn btn-blog mb-3" target="_blank">Deployed Project</a>
+                    <a href="{{ project.github_link }}" class="btn btn-blog mt-auto" target="_blank">GitHub Repository</a>
+                </div>
+            </div>
+        </div>
+        {% endfor %}
+    </div>
+</div>
 
 {% endblock %}
