--- a/portfolio/templates/portfolio/cv.html
+++ b/portfolio/templates/portfolio/cv.html
@@ -6,5 +6,29 @@
 
 {% block content %}
 
+<div class="container justify-contents-center">
+    <div class="row">
+        <div class="col-12 col-md-5 cv-section mb-3">
+            <div class="card cv-card h-100">
+                <div class="card-body d-flex flex-column">
+                {% if cv.cv_image_page_1 %}
+                <img src="{{ cv.cv_image_page_1.url }}" class="card-img-top img-fluid" alt="cv page 1">
+                {% endif %}
+                    <a href="{{ cv.pdf_cv_link }}" class="btn btn-blog mt-auto">Downloadable.pdf</a>
+                </div>
+            </div>
+        </div>
+        <div class="col-12 col-md-5 cv-section mb-3">
+            <div class="card cv-card h-100">
+                <div class="card-body d-flex flex-column">
+                {% if cv.cv_image_page_2 %}
+                <img src="{{ cv.cv_image_page_2.url }}" class="card-img-top img-fluid" alt="cv page 2">
+                {% endif %}
+                    <a href="{{ cv.doc_cv_link }}" class="btn btn-blog mt-auto">Downloadable.doc</a>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
 
 {% endblock %}
