--- a/portfolio/templates/portfolio/projects.html
+++ b/portfolio/templates/portfolio/projects.html
@@ -12,7 +12,7 @@
         <div class="col-md-6 col-xl-4 mb-3">
             <div class="card blog-card blog-text h-100">
                 {% if project.project_image %}
-                <img src="{{ project.project_image.url }}" class="card-img-top img-fluid project-img" alt="{{ projects.title }}">
+                <img src="{{ project.project_image.url }}" class="card-img-top img-fluid project-img" alt="{{ project.title }}">
                 {% endif %}
                 <div class="card-body d-flex flex-column">
                     <h5 class="card-title">{{ project.title|safe}}</h5>
