--- a/templates/base.html
+++ b/templates/base.html
@@ -47,8 +47,8 @@
                 <a href="{% url 'portfolio:contact' %}" class="icon-link {% if page == 'contact' %}active{% endif %}">
                     <img src="{% static 'images/dymo-contact.jpg' %}" alt="Contact label" class="nav-img mb-4">
                 </a>
-                <a href="{{ about.linkedin_link }}" class="links fs-5 px-4" target="_blank"><strong>LinkedIn</strong></a>
-                <a href="{{ about.github_link }}" class="links fs-5 px-4" target="_blank"><strong>GitHub</strong></a>
+                <a href="{{ about.linkedin_link }}" class="links px-4" target="_blank">LinkedIn</a>
+                <a href="{{ about.github_link }}" class="links px-4" target="_blank">GitHub</a>
             </div>
             <p class="mt-3">&copy; 2025 /*axdesigns*/</p>
         </footer>
