--- a/templates/base.html
+++ b/templates/base.html
@@ -45,7 +45,7 @@
         <footer class="global-footer text-center">
             <div class="footer-contact">
                 <a href="{% url 'portfolio:contact' %}" class="icon-link {% if page == 'contact' %}active{% endif %}">
-                    <img src="{% static 'images/dymo-contact.jpg' %}" alt="Contact label" class="nav-img mb-4">
+                    <img src="{% static 'images/dymo-contact.jpg' %}" alt="Contact label" class="nav-img mt-0 mb-4">
                 </a>
                 <a href="{{ about.linkedin_link }}" class="links px-4" target="_blank">LinkedIn</a>
                 <a href="{{ about.github_link }}" class="links px-4" target="_blank">GitHub</a>
