--- a/portfolio/templates/portfolio/blog.html
+++ b/portfolio/templates/portfolio/blog.html
@@ -17,7 +17,7 @@
                 <div class="card-body d-flex flex-column">
                     <h5 class="card-title">{{ blog.title|safe}}</h5>
                     <p class="card-text flex-grow-1 text-justify">{{ blog.summary|safe }}</p>
-                    <a href="{% url 'portfolio:blog_detail' slug=blog.slug %}" class="btn btn-blog mt-auto">View More</a>
+                    <a href="{% url 'portfolio:blog_detail' slug=blog.slug %}" class="btn btn-cv mt-auto">View More</a>
                 </div>
             </div>
         </div>
