--- a/portfolio/templates/portfolio/cv.html
+++ b/portfolio/templates/portfolio/cv.html
@@ -6,25 +6,35 @@
 
 {% block content %}
 
-<div class="container justify-contents-center">
-    <div class="row">
-        <div class="col-12 col-md-5 cv-section mb-3">
-            <div class="card cv-card h-100">
-                <div class="card-body d-flex flex-column">
-                {% if cv.cv_image_page_1 %}
-                <img src="{{ cv.cv_image_page_1.url }}" class="card-img-top img-fluid" alt="cv page 1">
-                {% endif %}
-                    <a href="{{ cv.pdf_cv_link }}" class="btn btn-blog mt-auto">Downloadable.pdf</a>
+<div class="container justify-contents-cente mt-4 mb-0">
+    <div class="row g-4">
+
+        <!-- PAGE 1 -->
+        <div class="col-12 col-md-6 cv-section">
+            <div class="card cv-card">
+                <div class="cv-card-body d-flex flex-column">
+                    {% if cv.cv_image_page_1 %}
+                        <img src="{{ cv.cv_image_page_1.url }}" 
+                             class="card-img-top img-fluid cv-img" 
+                             alt="cv page 1">
+                    {% endif %}
+                    <a href="{% url 'portfolio:download_cv_pdf' %}" 
+                       class="btn btn-cv mt-2">Download.pdf</a>
                 </div>
             </div>
         </div>
-        <div class="col-12 col-md-5 cv-section mb-3">
-            <div class="card cv-card h-100">
-                <div class="card-body d-flex flex-column">
-                {% if cv.cv_image_page_2 %}
-                <img src="{{ cv.cv_image_page_2.url }}" class="card-img-top img-fluid" alt="cv page 2">
-                {% endif %}
-                    <a href="{{ cv.doc_cv_link }}" class="btn btn-blog mt-auto">Downloadable.doc</a>
+        
+        <!-- PAGE 2 -->
+        <div class="col-12 col-md-6 cv-section">
+            <div class="card cv-card">
+                <div class="cv-card-body d-flex flex-column">
+                    {% if cv.cv_image_page_2 %}
+                        <img src="{{ cv.cv_image_page_2.url }}" 
+                             class="card-img-top img-fluid cv-img" 
+                             alt="cv page 2">
+                    {% endif %}
+                    <a href="{% url 'portfolio:download_cv_doc' %}" 
+                       class="btn btn-cv mt-2">Download.doc</a>
                 </div>
             </div>
         </div>
