--- a/portfolio/templates/portfolio/projects.html
+++ b/portfolio/templates/portfolio/projects.html
@@ -9,7 +9,7 @@
 <div class="container justify-contents-center">
     <div class="row">
         {% for project in projects %}
-        <div class="col-md-6 col-xl-4 mb-3">
+        <div class="col-md-6 col-lg-4 mb-3">
             <div class="card blog-card blog-text h-100">
                 {% if project.project_image %}
                 <img src="{{ project.project_image.url }}" class="card-img-top img-fluid project-img" alt="{{ project.title }}">
@@ -17,8 +17,10 @@
                 <div class="card-body d-flex flex-column">
                     <h5 class="card-title">{{ project.title|safe}}</h5>
                     <p class="card-text flex-grow-1 text-justify">{{ project.description|safe }}</p>
-                    <a href="{{ project.deployed_project_link }}" class="btn btn-blog mb-3" target="_blank">Deployed Project</a>
-                    <a href="{{ project.github_link }}" class="btn btn-blog mt-auto" target="_blank">GitHub Repository</a>
+                    <p class="card-text flex-grow-1 text-start">Tools Used: {{ project.tools_used|safe }}</p>
+                    <p class="card-text flex-grow-1 text-end">Grade: {{ project.grade_received|safe }}</p>
+                    <a href="{{ project.deployed_project_link }}" class="btn btn-cv mb-3" target="_blank">Deployed Project</a>
+                    <a href="{{ project.github_link }}" class="btn btn-cv mt-auto" target="_blank">GitHub Repository</a>
                 </div>
             </div>
         </div>
