--- a/portfolio/templates/portfolio/projects.html
+++ b/portfolio/templates/portfolio/projects.html
@@ -14,13 +14,31 @@
                 {% if project.project_image %}
                 <img src="{{ project.project_image.url }}" class="card-img-top img-fluid project-img" alt="{{ project.title }}">
                 {% endif %}
-                <div class="card-body d-flex flex-column">
-                    <h5 class="card-title">{{ project.title|safe}}</h5>
-                    <p class="card-text flex-grow-1 text-justify">{{ project.description|safe }}</p>
-                    <p class="card-text flex-grow-1 text-start">Tools Used: {{ project.tools_used|safe }}</p>
-                    <p class="card-text flex-grow-1 text-end">Grade: {{ project.grade_received|safe }}</p>
-                    <a href="{{ project.deployed_project_link }}" class="btn btn-cv mb-3" target="_blank">Deployed Project</a>
-                    <a href="{{ project.github_link }}" class="btn btn-cv mt-auto" target="_blank">GitHub Repository</a>
+                <div class="card-body d-flex flex-column mb-0">
+
+                    <!-- TITLE -->
+                    <h5 class="card-title">{{ project.title|safe }}</h5>
+
+                    <!-- DESCRIPTION AREA -->
+                     <div class="description-block mt-3">
+                        <p class="card-text text-justify">{{ project.description|safe }}</p>
+                     </div>
+
+                    <!-- INFO SECTION -->
+                    <div class="info-block mt-2 d-flex flex-column justify-content-between">
+                        <p class="card-text">
+                            <strong>Tools Used:</strong> {{ project.tools_used|safe }}
+                        </p>
+                        <p class="card-text text-end">
+                            <strong>Grade:</strong> {{ project.grade_received|safe }}
+                        </p>
+                    </div>
+
+                    <!-- Button on the bottom of the card -->
+                    <div class="button-stack d-flex flex-column">
+                        <a href="{{ project.deployed_project_link }}" class="btn btn-cv mb-3" target="_blank">Deployed Project</a>
+                        <a href="{{ project.github_link }}" class="btn btn-cv mt-auto" target="_blank">GitHub Repository</a>
+                    </div>
                 </div>
             </div>
         </div>
