--- a/portfolio/templates/portfolio/projects.html
+++ b/portfolio/templates/portfolio/projects.html
@@ -14,7 +14,7 @@
                 {% if project.project_image %}
                 <img src="{{ project.project_image.url }}" class="card-img-top img-fluid project-img" alt="{{ project.title }}">
                 {% endif %}
-                <div class="card-body d-flex flex-column mb-0">
+                <div class="card-body d-flex flex-column">
 
                     <!-- TITLE -->
                     <h5 class="card-title">{{ project.title|safe }}</h5>
