--- a/templates/base.html
+++ b/templates/base.html
@@ -5,8 +5,16 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+        <!-- Meta tags for search engines -->
+    <meta name="description" content="Ax's Portfolio showcasing web development projects, blog posts, and CV. Explore my work and get in touch!">
+    <meta name="keywords" content="Ax de Klerk, portfolio, web development, projects, blog, CV, axdesigns">
+    <meta name="author" content="axdesigns">
+
+    <!-- Bootstrap and CSS links -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <link rel="stylesheet" href="{% static 'css/style.css' %}">
+    
     <title>Ax's Portfolio</title>
 </head>
 <body class="{% block body_class %}{% endblock %}">
