Define contact form in views Route contact url paths Add content to contact template Add message block to base template Add portfolio label to home page

--- a/portfolio/templates/portfolio/home.html
+++ b/portfolio/templates/portfolio/home.html
@@ -5,6 +5,7 @@
 
 {% block hero_content %}
     <img src="{% static 'images/dymo-me.jpg' %}" alt="Ax’s name label" class="hero-center-img">
+    <img src="{% static 'images/dymo-portfolio.jpg' %}" alt="Portfolio label" class="hero-bottom-img">
 {% endblock %}
 
 {% block content %}{% endblock %}
