--- a/templates/base.html
+++ b/templates/base.html
@@ -46,6 +46,17 @@
             {% block hero_content %}{% endblock %}
         </div>
 
+        <!-- Messages -->
+        {% if messages %}
+        <div class="container mt-3">
+            {% for message in messages %}
+                <div class="alert alert-success text-center">
+                    {{ message }}
+                </div>
+            {% endfor %}
+        </div>
+        {% endif %}
+
         <main>
             {% block content %}{% endblock %}
         </main>
@@ -61,6 +72,8 @@
             <p class="mt-3">&copy; 2025 /*axdesigns*/</p>
         </footer>
     </div>
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 </body>
 </html>
 
